# dls_project

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
configs/: bge_large_flat.yaml  bge_small_flat.yaml  bge_small_ft.yaml  bge_small_hnsw.yaml  bge_small_ivf.yaml  e5_base_binary_rerank.yaml  e5_base_flat.yaml  e5_base_ft.yaml  e5_base_hnsw.yaml  e5_base_ivf.yaml  e5_base_ivfpq.yaml  e5_base_ivfpq192.yaml  e5_base_opq192.yaml  e5_base_pq192.yaml
scripts/: analysis.py  benchmark_compression.py  benchmark_split.py  build_index.py  compare.py  corpus_vector_bge_small_en_v1.5.py  create_corpus.py  create_test.py  demo.py  embedding_models_eval.py  evaluate.py  latency.py  mine_negatives.py  query_search_bge_small_en_v1.5.py  run_benchmarks.sh  shrink_model.py  sweep_index.py  terminal_test_bge_small_en_v1.5.py  test_bge_small_en_v1.5.py  train.py  tune_ann.py
scripts/bench/: benchmark_all.py  benchmark_compression.py  benchmark_split.py  bm25_baseline.py  compare.py  latency.py  sweep_index.py
scripts/data/: analyze.py  build_corpus.py  export_climate.py  export_fever.py
scripts/index/: build_index.py  build_sentence_index.py  tune_ann.py
scripts/train/: mine_negatives.py  train.py
setup/: hash.md
src/fever_search/: __init__.py  bench.py  config.py  data_io.py  encoder.py  eval.py  index.py  paths.py  search.py  text.py
src/fever_search/train/: mine.py  train.py
