[project]
name = "fever-search"
version = "0.1.0"
description = "Vector search over FEVER / Climate-FEVER evidence (Deep Learning for Search)"
requires-python = ">=3.11,<3.14"
dependencies = [
    "datasets>=2.19.0",
    "huggingface_hub>=0.23.0",
    "sentence-transformers>=3.0.0",
    "transformers>=4.40.0",
    "torch>=2.2.0",
    "faiss-cpu>=1.8.0",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "matplotlib>=3.8.0",
    "pyyaml>=6.0",
    "tqdm>=4.66.0",
    "bm25s>=0.3.9",
    "pystemmer>=3.1.0",
    "streamlit>=1.38.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fever_search"]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
# CUDA wheels only on Linux (the A100 box); macOS falls back to PyPI for local dev.
torch = [{ index = "pytorch-cu124", marker = "sys_platform == 'linux'" }]
